[package]
name = "hyper-graceful"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
pin-project-lite = "0.2"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
hyper = { version = "0.14.1", features = ["http1", "server", "tcp"] }
tokio = { version = "1", features = ["rt", "macros", "net", "signal"] }


[[example]]
name = "example"
path = "examples/example.rs"
