[package]
name = "hyper-graceful"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
pin-project-lite = "0.2"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
hyper = { version = "1.0.0-rc.1", features = ["http1", "server"] }
tokio = { version = "1", features = ["rt", "macros", "net", "signal"] }
http-body-util = "0.1.0-rc.1"


[[example]]
name = "example"
path = "examples/example.rs"
